# polypro

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Dockerfile  POLYFLOW_POLYMARKET_PRD.md  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
configs/: macro_calendar.yaml  policy.yaml
dashboard/: .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts
db/: schema.sql
deploy/: polyflow.service
docs/: AGENT_QUICKSTART.md  INSTITUTIONAL_STRATEGY_BLUEPRINT.md
hooks/: immutable_trade_logger.md  post_order_kelly_guard.md
skills/: clob_order_formatter.md  fractional_kelly_sizer.md  market_scanner.md  news_probability_delta.md
subagents/: market_divergence_monitor.md  news_context_monitor.md  portfolio_sentinel.md
tests/: test_automation_sources.py  test_bayesian.py  test_btc_feed.py  test_btc_market_parser.py  test_btc_threshold.py  test_calibration.py  test_circuit_breakers.py  test_clob_auth.py  test_clv.py  test_commodities_feed.py  test_crypto_momentum.py  test_dashboard.py  test_deployment_gates.py  test_ev.py  test_expectancy.py  test_external_odds_divergence.py  test_feed_health.py  test_four_layer_alignment.py  test_ghost_clob.py  test_health.py  test_incident.py  test_intra_market_arbitrage.py  test_kelly.py  test_macro_calendar.py  test_market_scanner.py  test_max_order_cap.py  test_near_expiry_certainty.py  test_negative_risk.py  test_news_repricing.py  test_odds_api.py  test_order_formatter.py  test_order_signing.py  test_order_sync.py  test_persistence.py  test_polymarket_clob_read.py  (+21 more)
(+110 files in other folders)
